--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>The Cost of Hacking – London Hackspace</title>
-    <link rel="stylesheet" href="css/base.css" type="text/css">
+    <title>Hackspace.gr: Budget</title>
+    <link rel="stylesheet" href="css/app.css" type="text/css">
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-
     <script type="text/javascript">
     google.load("visualization", "1", {packages:["corechart"]});
     google.setOnLoadCallback(drawCharts);
@@ -16,15 +15,15 @@
         // = Balance =
         // ===========
         var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Month');
-        data.addColumn('number', 'Subscriptions, Donations, Other Income £6,432');
-        data.addColumn('number', 'Expenses £5,236');
+        data.addColumn('string', 'Year');
+        data.addColumn('number', 'Έσοδα €6679.50');
+        data.addColumn('number', 'Έξοδα €6559.02');
         data.addRows([
-            ['March 2012', 6432.00, 5236.00],
+            ['2012', 6679.50, 6559.02],
         ]);
 
         var options = {
-          // title: 'London Hackspace Budget',
+          // title: 'Hackerspace.gr Budget',
             axisTitlesPosition: 'none',
             legend: { position: 'top' },
             hAxis: { viewWindow: { min: 0 } },
@@ -43,20 +42,18 @@
         data.addColumn('string', 'Item');
         data.addColumn('number', 'Cost');
         data.addRows([
-            ['Rent £3,750', 3750],
-            ['Business Rates £486', 486],
-            ['Electricity £300', 300],
-            ['Supplies £150', 150],
-            ['Cleaner £140', 140],
-            ['Club Mate £120', 120],
-            ['Water £50', 50],
-            ['Internet £22', 22],
-            ['Phone £18', 18],
-            ['Reserve £200', 200],
+            ['Ενοίκιο €3300', 3300],
+            ['Ρεύμα €1815', 1815],
+            ['Εξοπλισμός €729', 729],
+            ['Propaganda €300', 300],
+            ['Προμήθειες €201.39', 201.39],
+            ['Internet €161.26', 161.26],
+            ['Νερό €45', 45],
+            ['Συναλλαγές (paypal, bank) €7.37', 7.37],
         ]);
 
         var options = {
-          // title: 'London Hackspace Budget',
+          // title: 'Hackerspace.gr Budget',
             chartArea: { left: 0, top: 5, width: "100%", height: "95%"},
             fontSize: 16
         };
@@ -69,39 +66,38 @@
 <body>
     <div id="container">
         <header role="banner" class="text">
-            <h1><img src="http://london.hackspace.org.uk/images/london.png" width="60" height="60" alt="London Hackspace" /> The Cost of Hacking</h1>
-            <p>The London Hackspace is funded by your membership subscriptions &amp; donations. We plan to build up a cash reserve of three months running cost before we can look at moving to a larger space. At the moment we can just about cover the rent but don't have enough money for larger expenses (repairs, more frequent tool replacements, better electronics test equipment, new carpet, ...) Please consider becoming a member or increasing your monthly subscription payment.</p>
+            <h1><img src="img/hackerspace.svg" width="70" height="70" alt="Hackerspace.gr" /> The Cost of Hacking</h1>
+            <p>Το Hackspace.gr χρηματοδοτείται από τα μέλη του και από δωρεές.</p>
         </header>
 
         <div id="main" role="main" class="text">
             <article>
                 <header>
-                    <h2>Our Monthly Balance</h2>
+                    <h2>Ισολογισμός 2012 (μέχρι τώρα)</h2>
                 </header>
                 <div id="balance_div" class="graph" style="width: 600px; height: 150px;"></div>
             </article>
             <article>
                 <header>
-                    <h2>Our Monthly Expenses</h2>
+                    <h2>Έξοδα 2012 (μέχρι τώρα)</h2>
                 </header>
                 <div id="expenses_div" class="graph" style="width: 600px; height: 300px;"></div>
             </article>
 
             <article>
                 <header>
-                    <h2>How You Can Help</h2>
+                    <h2>Πως μπορείς να βοηθήσεις</h2>
                 </header>
                 <ul>
-                    <li><strong class="large">Become a member today!</strong> You'll get 24/7 access, a storage box for your projects, and warm fuzzy feelings for supporting us. The Hackspace requires our members to contribute an average subscription of £20/month to thrive, but how much you pay is up to you. The absolute minimum is £5/month. </li>
-                    <li>If you're already a member and can afford it, <strong class="large">increase your monthly subscription payment</strong> by a few pounds.</li>
-                    <li>Volunteer to run a workshop on your area of expertise, or help us keep our infrastructure in shape.</li>
-                    <li>Let us know if there's something you'd like added to or changed in the Hackspace that would convince you to pay more each month.</li>
+                    <li><strong class="large">Γίνε μέλος!</strong></li>
+                    <li>Κάνε μια δωρεά.</li>
+                    <li>Παραχώρησε εξοπλισμό ή άλλες προμήθειες</li>
                 </ul>
             </article>
         </div>
         <footer id="credits" role="contentinfo" class="text">
             <hr />
-            <p>Last updated 6 April 2012. Source: London Hackspace "<a href="http://wiki.london.hackspace.org.uk/view/Budget">Budget</a>" wiki page.</p>
+            <p>Last updated 27 November 2012.</p>
         </footer>
     </div>
 </body>
