--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id="main" role="main" class="text">
             <article>
                 <header>
-                    <h2>Ισολογισμός 2012 (μέχρι τώρα)</h2>
+                    <h2>Ισολογισμός 2012</h2>
                 </header>
                 <div id="balance_div" class="graph" style="width: 600px; height: 150px;"></div>
             </article>
@@ -97,7 +97,7 @@
         </div>
         <footer id="credits" role="contentinfo" class="text">
             <hr />
-            <p>Last updated 27 November 2012.</p>
+            <p>Last updated 31 December 2012.</p>
         </footer>
     </div>
 </body>
