use relative paths

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>Hackspace.gr: Budget</title>
-    <link rel="stylesheet" href="/media/css/app.css" type="text/css">
+    <link rel="stylesheet" href="media/css/app.css" type="text/css">
 </head>
 <body>
     <div id="container">
         <header role="banner" class="text">
-            <h1><img src="/media/img/hackerspace.svg" width="70" height="70" alt="Hackerspace.gr" /> The Cost of Hacking</h1>
+            <h1><img src="media/img/hackerspace.svg" width="70" height="70" alt="Hackerspace.gr" /> The Cost of Hacking</h1>
         </header>
 
         <div id="main" role="main" class="text">
-            <a href="/2012/">2012</a><br />
-            <a href="/2013/">2013</a><br />
+            <a href="2012/">2012</a><br />
+            <a href="2013/">2013</a><br />
         </div>
         <footer id="credits" role="contentinfo" class="text">
             <hr />
