Style index year links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         </header>
 
         <div id="main" role="main" class="text">
-            <a href="2012/">2012</a><br />
-            <a href="2013/">2013</a><br />
+            <a href="2012/" class="index-year">2012</a><br>
+            <a href="2013/" class="index-year">2013</a><br>
         </div>
         <footer id="credits" role="contentinfo" class="text">
             <hr />
