--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="main" role="main" class="text">
             <a href="2012/" class="index-year">2012</a><br>
             <a href="2013/" class="index-year">2013</a><br>
+	    <a href="2014/" class="index-year">2014</a><br>
         </div>
         <footer id="credits" role="contentinfo" class="text">
             <hr />
