--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Hackspace.gr: Budget</title>
-    <link rel="stylesheet" href="media/css/app.css" type="text/css">
+  <meta charset="utf-8">
+  <title>Hackspace.gr: Budget</title>
+  <link rel="stylesheet" href="media/css/app.css" type="text/css">
 </head>
 <body>
-    <div id="container">
-        <header role="banner" class="text">
-            <h1><img src="media/img/hackerspace.svg" width="70" height="70" alt="Hackerspace.gr" /> The Cost of Hacking</h1>
-        </header>
+  <div id="container">
+    <header role="banner" class="text">
+      <h1><img src="media/img/hackerspace.svg" width="70" height="70" alt="Hackerspace.gr"> The Cost of Hacking</h1>
+    </header>
 
-        <div id="main" role="main" class="text">
-            <a href="2012/" class="index-year">2012</a><br>
-            <a href="2013/" class="index-year">2013</a><br>
-	    <a href="2014/" class="index-year">2014</a><br>
-        </div>
-        <footer id="credits" role="contentinfo" class="text">
-            <hr />
-            <p>
-                <a href="http://hackerspace.gr">hackerspace.gr</a> -
-                Source code at <a href="https://github.com/hsgr/budget" target="_blank">github</a>
-            </p>
-        </footer>
+    <div id="main" role="main" class="text">
+      <a href="2012/" class="index-year">2012</a><br>
+      <a href="2013/" class="index-year">2013</a><br>
+      <a href="2014/" class="index-year">2014</a><br>
     </div>
+
+    <footer id="credits" role="contentinfo" class="text">
+      <hr>
+      <p>
+        <a href="http://hackerspace.gr">hackerspace.gr</a> -
+        Source code at <a href="https://github.com/hsgr/budget" target="_blank">github</a>
+      </p>
+    </footer>
+  </div>
 </body>
 </html>
