--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="2012/" class="index-year">2012</a><br>
       <a href="2013/" class="index-year">2013</a><br>
       <a href="2014/" class="index-year">2014</a><br>
+      <a href="2015/" class="index-year">2015</a><br>
     </div>
 
     <footer id="credits" role="contentinfo" class="text">
