--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="2013/" class="index-year">2013</a><br>
       <a href="2014/" class="index-year">2014</a><br>
       <a href="2015/" class="index-year">2015</a><br>
+      <a href="2016/" class="index-year">2016</a><br>
     </div>
 
     <footer id="credits" role="contentinfo" class="text">
