--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="2014/" class="index-year">2014</a><br>
       <a href="2015/" class="index-year">2015</a><br>
       <a href="2016/" class="index-year">2016</a><br>
+      <a href="2017/" class="index-year">2017</a><br>
     </div>
 
     <footer id="credits" role="contentinfo" class="text">
